# family-tree-frontend

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  ls.lh  ls.sh  package.sh  readme.md
.cargo/: config
.github/workflows/: build.yml
src/: api.rs  app.rs  lib.rs  types.rs
src/components/: bio_panel.rs  example.r_s  example.rs  graph_panel.rs  html.rs  mod.rs  navbar.rs  search_button.rs
src/pages/: home.rs
static/: .gitignore  index.html  styles.css
static/js/: cytoscape-shim.js
