[package]
authors = ["Codecrunchers <alan.ryan@gmail.com>"]
edition = "2018"
name = "family_tree"
version = "0.1.0"

[dependencies]
console_error_panic_hook = { version = "0.1.6", optional = false }
wee_alloc = { version = "0.4.5", optional = true }
anyhow = "1.0.32"
js-sys = "0.3.47"
vega_lite_3 = "0.3.1"
wasm-bindgen = { version = "0.2.70", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.20"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.47", features = ["Window", "Document", "Element", "HtmlElement"] }
yew = "0.17"
yew-router = "0.14.0"
serde_json = "1.0"


[dependencies.rusted_cypher]
branch = "neo4j_41"
path = "/home/alan/devel/rusted-cypher"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dev-dependencies]
wasm-bindgen-test = "0.3.8"



[lib]
crate-type = ["cdylib", "rlib"]
