[package]
authors = ["Codecrunchers <alan.ryan@gmail.com>"]
edition = "2018"
name = "family_tree"
version = "0.1.0"
[dependencies]
anyhow = "1.0.32"
js-sys = "0.3.47"
percent-encoding = "2.1.0"
serde_json = "1.0.62"
wasm-bindgen-futures = "0.4.20"
yew = "0.17"
yew-router = "0.14.0"


[dependencies.console_error_panic_hook]
optional = false
version = "0.1.6"

[dependencies.futures-timer]
features = ["wasm-bindgen"]
version = "3.0.2"

[dependencies.rusted_cypher]
branch = "neo4j_41"
path = "/home/alan/devel/rusted-cypher"

[dependencies.serde]
features = ["derive"]
version = "1.0.123"

[dependencies.wasm-bindgen]
features = ["serde-serialize"]
version = "0.2.70"

[dependencies.web-sys]
features = ["Window", "Document", "Element", "HtmlElement"]
version = "0.3.47"

[dependencies.wee_alloc]
optional = true
version = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[lib]
crate-type = ["cdylib", "rlib"]
